# poetry-plugin-taskipy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml  test.yaml
.hooks/: make_release_commit.py
poetry_plugin_taskipy/: commands.py  plugin.py
tests/: conftest.py  test_taskipy_cmd.py  utils.py
